--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,7 +12,7 @@
     "react-places-autocomplete": "^7.2.1",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.1",
-    "eslint-utils": "^1.4.1"
+    "eslint-utils": ">=1.4.1"
   },
   "scripts": {
     "start": "react-scripts start",
