--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,8 +11,7 @@
     "react-image-gallery": "^0.9.1",
     "react-places-autocomplete": "^7.2.1",
     "react-router-dom": "^5.0.1",
-    "react-scripts": "3.1.1",
-    "eslint-utils": ">=1.4.1"
+    "react-scripts": "3.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
